--- a/app/assets/stylesheets/components/_score.scss
+++ b/app/assets/stylesheets/components/_score.scss
@@ -97,7 +97,7 @@
 
 }
 
-@media (max-width: 414px) {
+@media (max-width: 414px), (max-height: 414px) {
   /* For a screen < 320px, this CSS will be read */
   .scores {
     // display: flex;
