--- a/app/assets/stylesheets/components/_box-challenges.scss
+++ b/app/assets/stylesheets/components/_box-challenges.scss
@@ -31,7 +31,7 @@ align-items: stretch;
 
 }
 
-@media (max-width: 414px) {
+@media (max-width: 414px), (max-height: 414px) {
   /* For a screen < 320px, this CSS will be read */
   #challenges-won {
     flex: 0 1 45%;
