--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -7,9 +7,11 @@
           <div class="logo-map-homepage">
             <%= image_tag("map_example.png", height: 250) %>
           </div>
-          <p>Can you locate places <br> on an unlabeled map ?</p>
-          <!-- Lien du bouton passer sur une URL absolu pour permettre de revenir à une page sans search -->
-          <a class="btn btn-fw btn-pimp btn-home" href="<%="#{root_path}#cards-from-paris"%>">Play now</a>
+          <div class="text-banner-homepage">
+            <p>Can you locate places <br> on an unlabeled map ?</p>
+            <!-- Lien du bouton passer sur une URL absolu pour permettre de revenir à une page sans search -->
+            <a class="btn btn-fw btn-pimp-w btn-home" href="<%="#{root_path}#cards-from-paris"%>">Play now</a>
+          </div>
         </div>
       </div>
     </div>
