modif de l'anglais

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -87,7 +87,7 @@
         <% if @games.empty? || nil %>
           <div class="let-play">
             <div class="row">
-              <H2>Alors comme ça on se créé un compte et on a peur de challenger les copains ?</H2>
+              <H2>So just like that you create an account and are too shy to challenge your friend ?</H2>
             </div><!-- fin de row-->
           </div> <!-- fin de let-play -->
 
