--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -13,7 +13,7 @@
 
   <div class="score-title text-center">
     <h2>Your score: <%= @total_score %> / <%= @max_score %></h2>
-    <% if @game.multi %>
+    <% if @game.multi && @total_score_opponent.present? && @total_score.present? %>
       <% if @total_score_opponent.nil? %>
         <div class="score-title text-center">
           <h2>Your opponent has not played yet</h2>
