--- a/app/views/shared/_navbar_mobile.html.erb
+++ b/app/views/shared/_navbar_mobile.html.erb
@@ -1,7 +1,8 @@
-<%= link_to root_path, class: "navbar-wagon-brand" do %>
-  <%= image_tag "logo-2.svg", id: "logo-app", class: "navbar-mobile" %>
+<% if current_page?(root_path) %>
+  <%= link_to root_path, class: "navbar-wagon-brand" do %>
+    <%= image_tag "logo-2.svg", id: "logo-app", class: "navbar-mobile" %>
+  <% end %>
 <% end %>
-
 <i id="burger" class="material-icons">menu</i>
 <div id="links">
   <% if user_signed_in? %>
