--- a/app/assets/stylesheets/components/_bar_timer.scss
+++ b/app/assets/stylesheets/components/_bar_timer.scss
@@ -7,11 +7,12 @@
 
 .bar {
   width: 2em;
-  height: 80vh;
   // border-radius: 0.5em;
   position: relative;
   background: $purple;
   box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1);
+  margin-top: 100px;
+  height: 55vh;
 }
 
 .bar .percentage {
