--- a/app/assets/stylesheets/pages/_games_show.scss
+++ b/app/assets/stylesheets/pages/_games_show.scss
@@ -1,3 +1,10 @@
+// .p-noir {
+//   margin-left: 30px;
+//   margin-right: 30px;
+//   font-weight: lighter;
+//   color: #000 !important;
+// }
+
 .title {
   font-size: 30px;
   display: flex;
@@ -42,7 +49,6 @@
 
 .POI-list p {
   font-size: 20px;
-  font-weight: bold;
   text-align: center;
 }
 
