--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -82,7 +82,7 @@
 
 
     <div class="POI-list" >
-      <p>The <%= @game.theme.name %> you discovered: </p>
+      <p class="p-noir">The <%= @game.theme.name %> you discovered: </p>
       <div class="row">
         <div class="POI-list-container">
           <% @pois.each do |poi| %>
